fix wrap

--- a/src/style.css
+++ b/src/style.css
@@ -331,6 +331,7 @@ a:focus {
 
 #mc_embed_signup_scroll {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.75rem;
   margin-top: 0.75rem;
 }
